@@ -1,3 +1,8 @@
+2011-01-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* clutterimage.py: Started implementation of clutter stage
+	  transparency.
+
 2011-01-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* actor/favicon.py: Added checking to my flickr photo for favoring.
